crates/vize_carton/tests/snapshots/loading__loads_legacy_pkl_lsp_alias.snap
---
source: crates/vize_carton/tests/loading.rs
expression: "serde_json::to_string_pretty(&config).unwrap()"
---
{
  "languageServer": {
    "enabled": true,
    "diagnostics": true,
    "completion": false,
    "hover": true,
    "definition": true,
    "formatting": true,
    "codeActions": true,
    "tsgo": false
  }
}
